<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="activity.CadastroAnuciosActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/edittextValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:allow_negative_values="true"
        tools:ignore="TouchTargetSizeCheck" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/telefone"
        android:inputType="number"
        android:padding="10dp"
        app:mask="(##) #####-####"
        app:maskCharacter="#"
        app:maskStyle="completable"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salvarAnucio"
        android:text="@string/cadastrarAnucio" />
</LinearLayout>